// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addNotes > Adds new notes to empty state > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Adds new notes to empty state > allCalls 1`] = `[]`;

exports[`addNotes > Adds new notes to empty state > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Adds new notes to empty state > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Adds new notes to empty state > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Adds new notes to empty state > openedPopup 1`] = `undefined`;

exports[`addNotes > Adds new notes to empty state > selectedTheme 1`] = `"System"`;

exports[`addNotes > Adds new notes to empty state > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Adds new notes to empty state > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Adds notes to existing state > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Adds notes to existing state > allCalls 1`] = `[]`;

exports[`addNotes > Adds notes to existing state > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Adds notes to existing state > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Adds notes to existing state > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "b8ff4ac5-6541-49d2-9c79-4444d872481e",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "6b24cde1-6118-4277-9791-8eab3c71cabb",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Adds notes to existing state > openedPopup 1`] = `undefined`;

exports[`addNotes > Adds notes to existing state > selectedTheme 1`] = `"System"`;

exports[`addNotes > Adds notes to existing state > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Adds notes to existing state > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Does not select latest note by default > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Does not select latest note by default > allCalls 1`] = `[]`;

exports[`addNotes > Does not select latest note by default > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Does not select latest note by default > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Does not select latest note by default > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Does not select latest note by default > openedPopup 1`] = `undefined`;

exports[`addNotes > Does not select latest note by default > selectedTheme 1`] = `"System"`;

exports[`addNotes > Does not select latest note by default > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Does not select latest note by default > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Filters out duplicate notes by uuid > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Filters out duplicate notes by uuid > allCalls 1`] = `[]`;

exports[`addNotes > Filters out duplicate notes by uuid > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Filters out duplicate notes by uuid > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Filters out duplicate notes by uuid > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Modified Title",
      },
      "timestamp": 0,
      "uuid": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Filters out duplicate notes by uuid > openedPopup 1`] = `undefined`;

exports[`addNotes > Filters out duplicate notes by uuid > selectedTheme 1`] = `"System"`;

exports[`addNotes > Filters out duplicate notes by uuid > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Filters out duplicate notes by uuid > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Handles empty array gracefully > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Handles empty array gracefully > allCalls 1`] = `[]`;

exports[`addNotes > Handles empty array gracefully > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Handles empty array gracefully > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Handles empty array gracefully > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Handles empty array gracefully > openedPopup 1`] = `undefined`;

exports[`addNotes > Handles empty array gracefully > selectedTheme 1`] = `"System"`;

exports[`addNotes > Handles empty array gracefully > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Handles empty array gracefully > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Handles mixed duplicates and new notes > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Handles mixed duplicates and new notes > allCalls 1`] = `[]`;

exports[`addNotes > Handles mixed duplicates and new notes > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Handles mixed duplicates and new notes > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Handles mixed duplicates and new notes > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Updated",
      },
      "timestamp": 0,
      "uuid": "2cbe0086-4b6f-466f-9ec0-9a302480da6a",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "2e36d871-0de2-43e6-9cbc-3c77e5d154cb",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Handles mixed duplicates and new notes > openedPopup 1`] = `undefined`;

exports[`addNotes > Handles mixed duplicates and new notes > selectedTheme 1`] = `"System"`;

exports[`addNotes > Handles mixed duplicates and new notes > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Handles mixed duplicates and new notes > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Handles selectLatest option with empty array > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Handles selectLatest option with empty array > allCalls 1`] = `[]`;

exports[`addNotes > Handles selectLatest option with empty array > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Handles selectLatest option with empty array > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Handles selectLatest option with empty array > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`addNotes > Handles selectLatest option with empty array > openedPopup 1`] = `undefined`;

exports[`addNotes > Handles selectLatest option with empty array > selectedTheme 1`] = `"System"`;

exports[`addNotes > Handles selectLatest option with empty array > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Handles selectLatest option with empty array > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`addNotes > Selects latest note when selectLatest option is true > KeyStore.getKey() 1`] = `undefined`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('MENU_WIDTH') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('THEME') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('UPDATE_SEEN') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > PersistentStorage.get('USERNAME') 1`] = `null`;

exports[`addNotes > Selects latest note when selectLatest option is true > allCalls 1`] = `[]`;

exports[`addNotes > Selects latest note when selectLatest option is true > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`addNotes > Selects latest note when selectLatest option is true > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`addNotes > Selects latest note when selectLatest option is true > noteState 1`] = `
{
  "extraSelectedNotes": [],
  "notes": [
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
    },
    Note {
      "content": {
        "body": "amet consectetur adipisicing",
        "delta": {
          "ops": [
            {
              "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
            },
          ],
        },
        "title": "Amet consectetur adipisicing",
      },
      "timestamp": 0,
      "uuid": "6b24cde1-6118-4277-9791-8eab3c71cabb",
    },
  ],
  "selectedNote": Note {
    "content": {
      "body": "amet consectetur adipisicing",
      "delta": {
        "ops": [
          {
            "insert": "Amet consectetur adipisicing\\n\\namet consectetur adipisicing\\namet consectetur adipisicing\\namet consectetur adipisicing\\n",
          },
        ],
      },
      "title": "Amet consectetur adipisicing",
    },
    "timestamp": 0,
    "uuid": "ac4e006d-38d4-4373-af31-4a5f46fc5184",
  },
}
`;

exports[`addNotes > Selects latest note when selectLatest option is true > openedPopup 1`] = `undefined`;

exports[`addNotes > Selects latest note when selectLatest option is true > selectedTheme 1`] = `"System"`;

exports[`addNotes > Selects latest note when selectLatest option is true > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`addNotes > Selects latest note when selectLatest option is true > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
